syntax = "proto3";

package massmsg;

import "google/protobuf/timestamp.proto";

enum CommonStatus {
    DISABLE = 0;
    ENABLE = 1;
}

message MyMessage {
    google.protobuf.Timestamp createdAt = 1;
}
